--- a/src/components/DarkLightToggle/DarkLightToggle.module.css
+++ b/src/components/DarkLightToggle/DarkLightToggle.module.css
@@ -1,3 +1,15 @@
 .wrapper {
-  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  border: none;
+  border-radius: 1000px;
+  background: transparent;
+  color: inherit;
+  cursor: pointer;
+}
+.wrapper:hover {
+  background: hsl(0deg 0% 50% / 0.2);
 }
